--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.3",
-    "@types/typescript": "^2.0.0",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@apollo/server": "^4.5.0",
+    "@graphql-tools/merge": "^8.4.0",
+    "axios": "^1.3.4",
+    "graphql": "^16.6.0",
+    "pg": "^8.10.0",
+    "sequelize": "^6.29.3"
   }
 }
