--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@apollo/server": "^4.5.0",
     "@graphql-tools/merge": "^8.4.0",
     "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "pg": "^8.10.0",
     "sequelize": "^6.29.3"
