--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "license": "MIT",
   "scripts": {
     "start:dev": "nodemon",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "test": "jest --config jest.config.ts"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.3",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.21",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
